--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -28,7 +28,7 @@ jobs:
       - run: npm run build
       # Deploy to Netlify using our dev secrets
       - name: Deploy to netlify
-        uses: netlify/actions/cli@master
+        uses: netlify/actions/cli@375963b92b795c7b979927c580dd6f2a65ebcf28
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.RESPVIS_NETLIFY }}
           NETLIFY_SITE_ID: ${{ secrets.RESPVIS_NETLIFY_DEVELOP_SITE_ID }}
