--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
     "rollup": "^3.20.2",
     "rollup-plugin-gzip": "^2.5.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.62.0",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   },
