--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "rollup": "^3.20.2",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-gzip": "^2.5.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.62.0",
