--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "respvis",
   "version": "0.2.0",
   "description": "A library to build responsive SVG-based visualizations.",
-  "main": "index.js",
+  "main": "./package/cjs/index.js",
+  "module": "./package/esm/index.js",
+  "files": ["package"],
+  "types": "./package/index.d.ts",
   "scripts": {
     "build": "npx gulp build",
     "start": "npx gulp"
@@ -26,9 +29,6 @@
   },
   "homepage": "https://github.com/AlmostBearded/respvis#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.2.1",
     "@types/d3": "^7.1.0",
     "@types/to-px": "^1.1.2",
     "@types/uuid": "^8.3.0",
@@ -38,13 +38,17 @@
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
-    "rollup": "^3.20.2",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-gzip": "^2.5.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "merge-stream": "^2.0.0",
     "sass": "^1.62.0",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "rollup": "^2.60.0",
+    "rollup-plugin-dts": "^3.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "8.3.3",
+    "rollup-plugin-gzip": "^2.5.0"
   },
   "dependencies": {
     "d3": "^7.2.1",
