--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "downlevelIteration": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "outDir": "package",
     "declaration": true,
     "declarationDir": "types"
   },
