Add styles generation for example dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -111,5 +111,6 @@ package-lock.json
 # File generated in src/examples for achieving self-containment
 src/examples/**/libs/
 src/examples/**/data/
+src/examples/**/styles/
 package/
 
