Ignore generated bundle in example-dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -112,5 +112,6 @@ package-lock.json
 src/examples/**/libs/
 src/examples/**/data/
 src/examples/**/styles/
+src/examples-dependencies/libs/respvis/
 package/
 
