--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "homepage": "https://github.com/tugraz-isds/respvis#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "8.3.3",
     "@types/d3": "^7.1.0",
     "@types/to-px": "^1.1.2",
     "@types/uuid": "^8.3.0",
@@ -40,18 +43,17 @@
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "merge-stream": "^2.0.0",
-    "sass": "^1.62.0",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4",
     "rollup": "^2.60.0",
     "rollup-plugin-dts": "^3.0.0",
+    "rollup-plugin-gzip": "^2.5.0",
     "rollup-plugin-terser": "^7.0.2",
-    "@rollup/plugin-commonjs": "^23.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "8.3.3",
-    "rollup-plugin-gzip": "^2.5.0"
+    "sass": "^1.62.0",
+    "tslib": "^2.2.0",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "d3": "^7.2.1",
