--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "declaration": true,
     "declarationDir": "types"
   },
-  "include": ["src/**/*"],
+  "include": ["src/lib/**/*"],
   "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
