--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "clean": "npx gulp clean",
     "build": "npx gulp build",
-    "start": "npx gulp"
+    "dev": "npx gulp serve --dev",
+    "prod": "npx gulp serve --prod"
   },
   "repository": {
     "type": "git",
@@ -34,12 +35,14 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-strip": "^3.0.4",
     "@rollup/plugin-typescript": "8.3.3",
     "@types/d3": "^7.1.0",
     "@types/to-px": "^1.1.2",
     "@types/uuid": "^8.3.0",
     "browser-sync": "^2.27.5",
     "del": "^6.0.0",
+    "dotenv": "^16.4.5",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
