--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-strip": "^3.0.4",
-    "@rollup/plugin-typescript": "8.3.3",
+    "@rollup/plugin-typescript": "^11",
     "@types/d3": "^7.1.0",
     "@types/to-px": "^1.1.2",
     "@types/uuid": "^8.3.0",
@@ -50,13 +50,13 @@
     "gulp-sass": "^5.1.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "merge-stream": "^2.0.0",
-    "rollup": "^2.60.0",
-    "rollup-plugin-dts": "^3.0.0",
+    "rollup": "^3",
+    "rollup-plugin-dts": "^5",
     "rollup-plugin-gzip": "^2.5.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "@rollup/plugin-terser": "^0.4.4",
     "sass": "^1.62.0",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^5.4.2"
   },
   "dependencies": {
     "d3": "^7.2.1",
