Add Basic Svgs for toolbar Add rollup plugin for importing svgs as raw strings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "declaration": true,
     "declarationDir": "types"
   },
-  "include": ["src/lib/**/*"],
+  "include": ["src/lib/**/*", "module-specs.d.ts"],
   "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
