--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-strip": "^3.0.4",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11",
     "@types/d3": "^7.1.0",
     "@types/to-px": "^1.1.2",
@@ -53,7 +54,7 @@
     "rollup": "^3",
     "rollup-plugin-dts": "^5",
     "rollup-plugin-gzip": "^2.5.0",
-    "@rollup/plugin-terser": "^0.4.4",
+    "rollup-plugin-string": "^3.0.0",
     "sass": "^1.62.0",
     "tslib": "^2.2.0",
     "typescript": "^5.4.2"
