Move Respvis Styles to libs folder Add cleanExampleDeps gulp task

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "types": "./package/index.d.ts",
   "scripts": {
     "cleanAll": "npx gulp cleanAll",
+    "cleanExampleDeps": "npx gulp cleanExampleDeps",
     "clean": "npx gulp clean",
     "build": "npx gulp build",
     "dev": "npx gulp serve --dev",
