--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "declaration": true,
     "declarationDir": "types"
   },
-  "include": ["src/lib/**/*", "module-specs.d.ts"],
-  "exclude": ["node_modules", "dist", "**/*.spec.ts"]
+  "include": ["src/**/*", "module-specs.d.ts"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
