--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/addon-essentials": "^8.0.5",
     "@storybook/addon-interactions": "^8.0.5",
     "@storybook/addon-links": "^8.0.5",
+    "@storybook/addon-storysource": "^8.0.5",
     "@storybook/blocks": "^8.0.5",
     "@storybook/html": "^8.0.5",
     "@storybook/html-vite": "^8.0.5",
