Parcoord - change cursor appearances like in parcoord toolbar - change ellipses to be rects
Add gulp task for creating base64 images for cursor svgs
Add styles for different cursor and positions
Add util for fixing current cursor

--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,7 @@ src/examples/**/libs/
 src/examples/**/data/
 src/examples/**/styles/
 src/examples-dependencies/libs/respvis/
+src/examples-dependencies/util
 package/
 
 notes
