--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev": "npx gulp serve --dev",
     "prod": "npx gulp serve --prod",
     "storybook": "storybook dev -p 6006 -c ./src/storybook/config",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "gen-base64": "npx gulp genBase64"
   },
   "repository": {
     "type": "git",
@@ -55,10 +56,13 @@
     "del": "^6.0.0",
     "dotenv": "^16.4.5",
     "gulp": "^4.0.2",
+    "gulp-base64": "^0.1.3",
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-svgstore": "^9.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "madge": "^6.1.0",
     "merge-stream": "^2.0.0",
@@ -69,6 +73,7 @@
     "rollup-plugin-string": "^3.0.0",
     "sass": "^1.62.0",
     "storybook": "^8.0.5",
+    "through2": "^4.0.2",
     "tslib": "^2.2.0",
     "typescript": "^5.4.2"
   },
