--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "declarationDir": "types"
   },
   "include": ["src/**/*", "module-specs.d.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "src/storybook/**/*"]
 }
