--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp": "^4.0.2",
     "gulp-base64": "^0.1.3",
     "gulp-cli": "^2.3.0",
+    "gulp-cssimport": "^7.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
