--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npx gulp build",
     "serve-dev": "npx gulp serve --dev",
     "serve-prod": "npx gulp serve --prod",
-    "gen-base64": "npx gulp genBase64",
+    "genSVGDataURI": "npx gulp genSVGDataURI",
     "storybook": "storybook dev -p 6006 -c src/storybook",
     "build-storybook": "storybook build",
     "prepare": "ts-patch install -s"
@@ -65,6 +65,7 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "madge": "^6.1.0",
     "merge-stream": "^2.0.0",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "rollup": "^3",
     "rollup-plugin-dts": "^5",
