Build Only relevant types for corresponding modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,21 +13,20 @@
     "declaration": true,
     "declarationDir": "types",
     "paths": {
-      "respvis-core": ["./src/lib/respvis-core"],
-      "respvis-core/*": ["./src/lib/respvis-core/*"],
-      "respvis-bar": ["./src/lib/respvis-bar"],
-      "respvis-bar/*": ["./src/lib/respvis-bar/*"],
-      "respvis-cartesian": ["./src/lib/respvis-cartesian"],
-      "respvis-cartesian/*": ["./src/lib/respvis-cartesian/*"],
-      "respvis-line": ["./src/lib/respvis-line"],
-      "respvis-line/*": ["./src/lib/respvis-line/*"],
-      "respvis-parcoord": ["./src/lib/respvis-parcoord"],
-      "respvis-paracoord/*": ["./src/lib/respvis-parcoord/*"],
-      "respvis-point": ["./src/lib/respvis-point"],
-      "respvis-point/*": ["./src/lib/respvis-point/*"],
-      "respvis-tooltip": ["./src/lib/respvis-tooltip"],
-      "respvis-tooltip/*": ["./src/lib/respvis-tooltip/*"],
-      "respvis-tooltipsdf/*": ["./src/lib/respvis-tooltipsdf/*"]
+      "respvis-core": ["./src/ts/respvis-core"],
+      "respvis-core/*": ["./src/ts/respvis-core/*"],
+      "respvis-bar": ["./src/ts/respvis-bar"],
+      "respvis-bar/*": ["./src/ts/respvis-bar/*"],
+      "respvis-cartesian": ["./src/ts/respvis-cartesian"],
+      "respvis-cartesian/*": ["./src/ts/respvis-cartesian/*"],
+      "respvis-line": ["./src/ts/respvis-line"],
+      "respvis-line/*": ["./src/ts/respvis-line/*"],
+      "respvis-parcoord": ["./src/ts/respvis-parcoord"],
+      "respvis-paracoord/*": ["./src/ts/respvis-parcoord/*"],
+      "respvis-point": ["./src/ts/respvis-point"],
+      "respvis-point/*": ["./src/ts/respvis-point/*"],
+      "respvis-tooltip": ["./src/ts/respvis-tooltip"],
+      "respvis-tooltip/*": ["./src/ts/respvis-tooltip/*"]
     }
   },
   "include": ["src/**/*", "module-specs.d.ts"],
