Add Dependency Based Option for Bar Chart Example

--- a/src/storybook/tsconfig.json
+++ b/src/storybook/tsconfig.json
@@ -16,8 +16,7 @@
       "respvis-point": ["../ts/respvis-point"],
       "respvis-point/*": ["../ts/respvis-point/*"],
       "respvis-tooltip": ["../ts/respvis-tooltip"],
-      "respvis-tooltip/*": ["../ts/respvis-tooltip/*"],
-      "respvis-tooltipsdf/*": ["../ts/respvis-tooltipsdf/*"]
+      "respvis-tooltip/*": ["../ts/respvis-tooltip/*"]
     }
   },
   "include": ["./stories/**/*",
