--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11",
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-interactions": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
-    "@storybook/addon-storysource": "^8.0.5",
-    "@storybook/blocks": "^8.0.5",
-    "@storybook/html": "^8.0.5",
-    "@storybook/html-vite": "^8.0.5",
-    "@storybook/test": "^8.0.5",
+    "@storybook/addon-essentials": "8.0.9",
+    "@storybook/addon-interactions": "8.0.9",
+    "@storybook/addon-links": "8.0.9",
+    "@storybook/addon-storysource": "8.0.9",
+    "@storybook/blocks": "8.0.9",
+    "@storybook/html": "8.0.9",
+    "@storybook/html-vite": "8.0.9",
+    "@storybook/test": "8.0.9",
     "@types/d3": "^7.1.0",
     "@types/gulp": "^4.0.17",
     "browser-sync": "^2.27.5",
@@ -72,7 +72,7 @@
     "rollup-plugin-dts": "^5",
     "rollup-plugin-gzip": "^2.5.0",
     "rollup-plugin-string": "^3.0.0",
-    "storybook": "^8.0.5",
+    "storybook": "8.0.9",
     "ts-node": "^10.9.2",
     "ts-patch": "^3.1.2",
     "tslib": "^2.2.0",
