--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -36,3 +36,14 @@ jobs:
         with:
           args: deploy --dir=dist --prod --filter respvis-core
           secrets: '["RESPVIS_NETLIFY", "RESPVIS_NETLIFY_DEVELOP_SITE_ID"]'
+      # Build docs
+      - run: npm run build-storybook
+      # Deploy docs to Netlify
+      - name: Deploy to netlify
+        uses: netlify/actions/cli@375963b92b795c7b979927c580dd6f2a65ebcf28
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.RESPVIS_NETLIFY }}
+          NETLIFY_SITE_ID: ${{ secrets.RESPVIS_NETLIFY_DEVELOP_DOCS_SITE_ID }}
+        with:
+          args: deploy --dir=storybook-static --prod --filter respvis-core
+          secrets: '["RESPVIS_NETLIFY", "RESPVIS_NETLIFY_DEVELOP_DOCS_SITE_ID"]'
