--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "serve-prod": "npx gulp serve --prod",
     "genSVGDataURI": "npx gulp genSVGDataURI",
     "storybook": "storybook dev -p 6006 -c src/storybook",
-    "build-storybook": "storybook build -c src/storybook --force-build-preview",
+    "build-storybook": "storybook build -c src/storybook",
     "prepare": "ts-patch install -s"
   },
   "repository": {
@@ -77,6 +77,8 @@
     "merge-stream": "^2.0.0",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "rollup": "^3",
     "rollup-plugin-dts": "^5",
     "rollup-plugin-gzip": "^2.5.0",
