--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@storybook/blocks": "8.0.9",
     "@storybook/html": "8.0.9",
     "@storybook/html-vite": "8.0.9",
+    "@storybook/manager-api": "8.0.9",
     "@storybook/test": "8.0.9",
+    "@storybook/theming": "8.0.9",
     "@types/d3": "^7.1.0",
     "@types/gulp": "^4.0.17",
     "browser-sync": "^2.27.5",
