Adapt release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,8 @@ name: Production workflow
 
 # When workflow is triggered
 on:
-  workflow_dispatch:
-  push:
-    tags:
-      - "v*"
+  release:
+    types: [created]
 
 # Jobs to carry out
 jobs:
@@ -33,7 +31,7 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.RESPVIS_NETLIFY }}
           NETLIFY_SITE_ID: ${{ secrets.RESPVIS_NETLIFY_MASTER_SITE_ID }}
         with:
-          args: deploy --dir=dist --prod
+          args: deploy --dir=dist --prod --filter respvis-core
           secrets: '["RESPVIS_NETLIFY", "RESPVIS_NETLIFY_MASTER_SITE_ID"]'
       # Build docs
       - run: npm run build-storybook
