Requested Changes - Reexport frequently used d3 functionality - Remove unnecessary required empty x, y, cartesian axis arguments - Begin Adapting How to create a chart guides - Create key class to let user conveniently query visual primitive key props (WIP)

--- a/src/storybook/tsconfig.json
+++ b/src/storybook/tsconfig.json
@@ -29,6 +29,7 @@
   "include": [
     "./stories/**/*",
     "../../declarations/*.d.ts",
+    "./vite-env.d.ts"
   ],
   "exclude": ["node_modules", "**/*.spec.ts", "**/package"]
 }
