--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "moduleResolution": "bundler",
     "noEmitOnError": false,
     "skipLibCheck": true,
     "lib": ["ES2015", "ES2019.Array", "DOM"],
@@ -13,6 +14,7 @@
     "declaration": true,
     "declarationDir": "types",
     "isolatedModules": true,
+    "resolveJsonModule": true,
     "paths": {
       "respvis-core": ["./src/packages/respvis-core/ts"],
       "respvis-core/*": ["./src/packages/respvis-core/ts/*"],
